--- a/index.html
+++ b/index.html
@@ -3,104 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft-Toos</title>
+    <title>Minecraft工具下载</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+
         body {
-            font-family: Arial, sans-serif;
-        }
-       .header {
-            background-color: #a3e6a8; /* 绿色 */
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-       .logo {
-            max-width: 200px;
-        }
-       .nav a {
-            margin-left: 20px;
-            color: #333;
-            text-decoration: none;
-        }
-       .nav a:hover {
-            color: #007bff;
-        }
-       .main {
-            text-align: center;
-            padding: 40px;
-        }
-       .download-btn {
-            background-color: #42a5f5;
-            color: white;
-            padding: 15px 50px;
-            border-radius: 10px;
-            border: 2px solid #0d47a1;
-            font-size: 18px;
-            cursor: pointer;
-        }
-       .features {
             display: flex;
             justify-content: center;
-            gap: 40px;
-            margin-top: 40px;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f0f2f5;
         }
-       .feature {
+
+        .container {
             text-align: center;
+            padding: 2rem;
+            background-color: white;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
-       .feature h3 {
-            font-size: 24px;
-            margin-bottom: 10px;
+
+        .image-container {
+            max-width: 400px;
+            margin: 0 auto 2rem;
         }
-       .feature p {
-            font-size: 16px;
+
+        .image-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
         }
-       .footer {
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            color: #666;
+
+        h1 {
+            color: #1a73e8;
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            color: #5f6368;
+            font-size: 1.1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .download-btn {
+            display: inline-block;
+            padding: 0.8rem 1.5rem;
+            background-color: #1a73e8;
+            color: white;
+            text-decoration: none;
+            border-radius: 24px;
+            font-size: 1.1rem;
+            font-weight: 500;
+            transition: background-color 0.3s ease;
+        }
+
+        .download-btn:hover {
+            background-color: #1557b0;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
-        <div class="nav">
-            <a href="#">下载</a>
-            <a href="#">关于</a>
-            <a href="#">Github</a>
+    <div class="container">
+        <!-- 图片区域（请替换为您的图片URL或路径） -->
+        <div class="image-container">
+            <img src="https://example.com/your-image.jpg" alt="Minecraft工具截图">
         </div>
-    </div>
-    <div class="main">
-        <h1>Minecraft-Toos 一个便捷好用的我的世界工具箱</h1>
-        <button class="download-btn">立即下载</button>
-    </div>
-    <div class="features">
-        <div class="feature">
-            <h3>功能齐全</h3>
-            <p>主文件<=300MB，却有12项大板块</p>
-        </div>
-        <div class="feature">
-            <h3>启动迅速</h3>
-            <p>只需要2秒即可快速启动，无需多余的等待</p>
-        </div>
-        <div class="feature">
-            <h3>开源免费</h3>
-            <p>本工具箱已在Github开源，无需支付多余费用</p>
-        </div>
-        <div class="feature">
-            <h3>安全无毒</h3>
-            <p>本软件所有板块以及主程序已经过杀毒软件检测无任何病毒</p>
-        </div>
-    </div>
-    <div class="footer">
-        JetCPP©2024-2025保留所有权利
+
+        <h1>Minecraft 实用工具</h1>
+        <p>高效管理你的Minecraft世界，支持最新版本，安全稳定无广告</p>
+
+        <!-- 下载链接 -->
+        <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe" 
+           class="download-btn">立即下载</a>
     </div>
 </body>
 </html>
