--- a/index.html
+++ b/index.html
@@ -3,118 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft-Toos - 便捷我的世界工具箱</title>
+    <title>关于 Minecraft-Toos</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         body {
-            background-color: #f0f0f0;
+            background-color: #f5f7fa;
             min-height: 100vh;
             position: relative;
             padding-bottom: 60px;
         }
 
         header {
-            background-color: #4CAF50;
-            padding: 20px 40px;
+            background-color: white;
+            padding: 15px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
 
-        .title {
-            color: white;
-            font-size: 28px;
-            font-weight: bold;
+        nav {
+            display: flex;
+            gap: 30px;
+            align-items: center;
         }
 
-        nav a {
-            color: white;
+        .nav-link {
+            color: #666;
             text-decoration: none;
-            margin-left: 30px;
             font-size: 16px;
+            position: relative;
+            padding: 5px 0;
             transition: color 0.3s;
         }
 
-        nav a:hover {
-            color: #e0e0e0;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 80px 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .subtitle {
+        .nav-link:hover {
             color: #333;
-            font-size: 24px;
-            margin: 20px 0;
         }
 
-        .author {
+        .nav-link.active {
+            color: #1976D2;
+            font-weight: 500;
+        }
+
+        .nav-link.active::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            width: 100%;
+            height: 2px;
+            background: #1976D2;
+        }
+
+        .github-link {
+            display: flex;
+            align-items: center;
+            gap: 5px;
             color: #666;
-            font-size: 14px;
-            margin-bottom: 40px;
-        }
-
-        .download-btn {
-            display: inline-block;
-            padding: 15px 40px;
-            background-color: #2196F3;
-            color: white;
             text-decoration: none;
-            border-radius: 25px;
-            font-size: 18px;
-            transition: all 0.3s;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            position: relative;
-            top: 0;
+            font-size: 16px;
+            transition: color 0.3s;
+            margin-left: auto;
         }
 
-        .download-btn:hover {
-            background-color: #1976D2;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
+        .github-link:hover {
+            color: #333;
         }
 
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            max-width: 1000px;
-            margin: 60px auto;
+        .github-link::before {
+            content: '🐙';
+            font-size: 1.2em;
+        }
+
+        .main-content {
+            max-width: 800px;
+            margin: 40px auto;
             padding: 0 20px;
+            line-height: 1.8;
+            color: #333;
         }
 
-        .feature-card {
-            background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            transition: transform 0.3s;
+        .main-content h1 {
+            color: #1976D2;
+            margin-bottom: 20px;
+            border-left: 4px solid #1976D2;
+            padding-left: 15px;
         }
 
-        .feature-card:hover {
-            transform: translateY(-5px);
+        .main-content h2 {
+            color: #2E7D32;
+            margin: 30px 0 15px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 5px;
         }
 
-        .feature-title {
-            color: #4CAF50;
-            margin-bottom: 10px;
-            font-size: 20px;
+        .main-content p {
+            margin-bottom: 15px;
+            line-height: 1.8;
         }
 
-        .feature-desc {
+        .main-content ol {
+            margin: 15px 0;
+            padding-left: 25px;
             color: #666;
-            line-height: 1.6;
+        }
+
+        .main-content ol li {
+            margin-bottom: 10px;
+            padding-left: 5px;
+        }
+
+        .download-list {
+            margin: 20px 0;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+        }
+
+        .download-link {
+            display: block;
+            padding: 8px 15px;
+            background: #1976D2;
+            color: white !important;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: transform 0.2s;
+        }
+
+        .download-link:hover {
+            background: #1565C0;
+            transform: translateX(5px);
+        }
+
+        .bilibili-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            color: #FF69B4;
+            text-decoration: none;
+            margin: 20px 0;
+            font-weight: 500;
+        }
+
+        .bilibili-link::before {
+            content: '🎮';
         }
 
         footer {
@@ -123,47 +165,96 @@
             width: 100%;
             text-align: center;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255,255,255,0.8);
+            backdrop-filter: blur(5px);
             box-shadow: 0 -2px 5px rgba(0,0,0,0.05);
             color: #999;
             font-size: 14px;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                padding: 20px;
+                gap: 15px;
+            }
+
+            nav {
+                width: 100%;
+                justify-content: center;
+                gap: 20px;
+                order: 2;
+            }
+
+            .github-link {
+                margin-left: 0;
+                order: 1;
+            }
+
+            .download-list {
+                grid-template-columns: 1fr;
+            }
+
+            .main-content {
+                margin: 20px auto;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="title">Minecraft-Toos</div>
         <nav>
-            <a href="#">下载</a>
-            <a href="#">关于</a>
-            <a href="https://github.com/dongzheyu/Minecraft-Toos">Github</a>
+            <a href="#" class="nav-link active">关于</a>
+            <a href="index.html" class="nav-link">下载</a>
         </nav>
+        
+        <a href="https://github.com/dongzheyu/Minecraft-Toos" 
+           class="github-link"
+           target="_blank"
+           rel="noopener noreferrer">
+            GitHub
+        </a>
     </header>
 
-    <div class="hero">
-        <div class="subtitle">一个便捷好用的我的世界工具箱</div>
-        <div class="author">by bilibili我是dongle</div>
-        <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe" 
-           class="download-btn"
-           download>立即下载</a>
-    </div>
+    <div class="main-content">
+        <h1>Minecraft-Toos 自述文件</h1>
 
-    <div class="features">
-        <div class="feature-card">
-            <div class="feature-title">功能齐全</div>
-            <div class="feature-desc">集成多种实用工具，满足各种游戏需求</div>
+        <h2>📜 项目简介</h2>
+        <p>这是我2024年7月开发的一个项目，从1.0版本一直到6.1版本，作者开发用了非常多的时间。最初使用VS(Microsoft Visual Studio)开发，但因电脑问题导致VS无法更新/安装，后来改用破解的Clion进行开发。</p>
+        <p>本项目原名为"我的世界双版本启动器"，后改名为Minecraft Toos。记得去我的B站主页：<a href="https://space.bilibili.com/3546730880567808" class="bilibili-link" target="_blank">点个赞哦~~~</a></p>
+
+        <h2>🚀 使用方法</h2>
+        <ol>
+            <li>（小白都会的方法）从发布页下载安装包和.NET运行库</li>
+            <li>小白无脑式安装，安装包纯中文无英文</li>
+            <li>点击快捷方式即可打开，耗费多余步骤！</li>
+            <li>选择功能大全，开始使用吧~</li>
+        </ol>
+
+        <h2>📥 下载专区</h2>
+        <div class="download-list">
+            <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe" 
+               class="download-link">
+                6.4.0 点击下载
+            </a>
+            <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.3.3/Minecraft-Toos.Setup.exe" 
+               class="download-link">
+                6.3.3 点击下载
+            </a>
+            <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.1/Minecraft-Toos.Setup.exe" 
+               class="download-link">
+                6.1 点击下载
+            </a>
+            <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.0/Minecraft-Toos.Setup.exe" 
+               class="download-link">
+                6.0 点击下载
+            </a>
         </div>
-        <div class="feature-card">
-            <div class="feature-title">启动迅速</div>
-            <div class="feature-desc">优化启动流程，秒开你的游戏世界</div>
-        </div>
-        <div class="feature-card">
-            <div class="feature-title">开源免费</div>
-            <div class="feature-desc">完全开源代码，永久免费使用</div>
-        </div>
-        <div class="feature-card">
-            <div class="feature-title">安全无毒</div>
-            <div class="feature-desc">通过安全认证，无任何恶意代码</div>
+        <p>其他早期版本请在<a href="https://github.com/dongzheyu/Minecraft-Toos/releases">发布页面</a>下载</p>
+
+        <div style="margin-top: 40px; color: #999; font-size: 0.9em;">
+            自述文件更新日期：2025年4月26日 19:57:13<br>
+            bilibili 我是dongle(C)保留所有权利
         </div>
     </div>
 
