--- a/index.html
+++ b/index.html
@@ -3,172 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft-Toos - 便捷我的世界工具箱</title>
+    <title>Minecraft-Toos</title>
     <style>
-        * {
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
         }
-
-        body {
-            background-color: #f0f0f0;
-            min-height: 100vh;
-            position: relative;
-            padding-bottom: 60px;
-        }
-
         header {
-            background-color: #4CAF50;
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .title {
+            background: linear-gradient(to right, #33cc33, #99ff99);
             color: white;
-            font-size: 28px;
-            font-weight: bold;
+            padding: 20px;
+            display: flex;
+            align-items: center;
         }
-
+        .logo {
+            width: 200px;
+            height: auto;
+        }
+        nav {
+            margin-left: auto;
+        }
         nav a {
             color: white;
             text-decoration: none;
-            margin-left: 30px;
-            font-size: 16px;
-            transition: color 0.3s;
+            margin-left: 20px;
         }
-
-        nav a:hover {
-            color: #e0e0e0;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 80px 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .subtitle {
-            color: #333;
-            font-size: 24px;
-            margin: 20px 0;
-        }
-
-        .author {
-            color: #666;
-            font-size: 14px;
-            margin-bottom: 40px;
-        }
-
-        .download-btn {
-            display: inline-block;
-            padding: 15px 40px;
-            background-color: #2196F3;
-            color: white;
-            text-decoration: none;
-            border-radius: 25px;
-            font-size: 18px;
-            transition: all 0.3s;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            position: relative;
-            top: 0;
-        }
-
-        .download-btn:hover {
-            background-color: #1976D2;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
-        }
-
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            max-width: 1000px;
-            margin: 60px auto;
-            padding: 0 20px;
-        }
-
-        .feature-card {
-            background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            transition: transform 0.3s;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .feature-title {
-            color: #4CAF50;
-            margin-bottom: 10px;
-            font-size: 20px;
-        }
-
-        .feature-desc {
-            color: #666;
-            line-height: 1.6;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+        main {
             text-align: center;
             padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 -2px 5px rgba(0,0,0,0.05);
-            color: #999;
-            font-size: 14px;
+        }
+        .download-button {
+            background-color: #337ab7;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        .features {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 40px;
+        }
+        .feature {
+            text-align: center;
+            border-right: 1px solid #ccc;
+            padding: 0 20px;
+        }
+        .feature:last-child {
+            border-right: none;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="title">Minecraft-Toos</div>
+        <img src="https://github.com/dongzheyu/dongzheyu.github.io/raw/main/logo.png" alt="Minecraft-Toos Logo" class="logo">
         <nav>
-            <a href="#">下载</a>
-            <a href="#">关于</a>
-            <a href="https://github.com/dongzheyu/Minecraft-Toos">Github</a>
+            <a href="#download">下载</a>
+            <a href="#about">关于</a>
+            <a href="https://github.com/dongzheyu/Minecraft-Toos?tab=readme-ov-file#minecraft-toos%E7%AE%80%E8%A6%81">Github</a>
         </nav>
     </header>
-
-    <div class="hero">
-        <div class="subtitle">一个便捷好用的我的世界工具箱</div>
-        <div class="author">by bilibili我是dongle</div>
-        <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe" 
-           class="download-btn"
-           download>立即下载</a>
-    </div>
-
-    <div class="features">
-        <div class="feature-card">
-            <div class="feature-title">功能齐全</div>
-            <div class="feature-desc">集成多种实用工具，满足各种游戏需求</div>
+    <main>
+        <h1>Minecraft-Toos 一个便捷好用的我的世界工具箱</h1>
+        <button class="download-button" onclick="window.location.href='https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe'">立即下载</button>
+        <div class="features">
+            <div class="feature">
+                <h2>功能齐全</h2>
+                <p>主文件<=300MB，却有12项大板块</p>
+            </div>
+            <div class="feature">
+                <h2>启动迅速</h2>
+                <p>只需要2秒即可快速启动，无需多余的等待</p>
+            </div>
+            <div class="feature">
+                <h2>开源免费</h2>
+                <p>本工具箱已在GitHub开源，无需支付多余费用</p>
+            </div>
+            <div class="feature">
+                <h2>安全无毒</h2>
+                <p>本软件所有板块以及主程序已经过杀毒软件检测无任何病毒</p>
+            </div>
         </div>
-        <div class="feature-card">
-            <div class="feature-title">启动迅速</div>
-            <div class="feature-desc">优化启动流程，秒开你的游戏世界</div>
-        </div>
-        <div class="feature-card">
-            <div class="feature-title">开源免费</div>
-            <div class="feature-desc">完全开源代码，永久免费使用</div>
-        </div>
-        <div class="feature-card">
-            <div class="feature-title">安全无毒</div>
-            <div class="feature-desc">通过安全认证，无任何恶意代码</div>
-        </div>
-    </div>
-
-    <footer>
-        JetCPP©2024-2025 保留所有权利
+    </main>
+    <footer id="about">
+        <p>Minecraft-Toos自述文件</p>
+        <p>Minecraft 工具简要</p>
+        <p>这是我2024年7月开发的一个项目，从1.0版本一直到6.1版本，作者开发用了非常多的时间</p>
+        <p>本人最初是用VS(Microsoft Visual Studio)开发，但是因为电脑出现了某些问题导致VS无法进行更新、安装操作。后来用破解工具破解了Clion，以后就用了Clion。</p>
+        <p>本项目原名为我的世界双版本启动器，后改名为Minecraft Toos</p>
+        <p>记得去我的B站主页: <a href="https://space.bilibili.com/3546730880567808">https://space.bilibili.com/3546730880567808</a> 点个赞哦~~~</p>
+        <p>JetCPP©2024-2025保留所有权利</p>
     </footer>
 </body>
 </html>
