--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://github.com/dongzheyu/dongzheyu.github.io/raw/main/logo.png" alt="Logo" class="logo" />
+    <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
       <a href="index.html">首页</a>
       <a href="download.html">下载</a>
