--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://github.com/dongzheyu/dongzheyu.github.io/raw/main/logo.png" alt="Logo" class="logo" />
+    <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
       <a href="index.html">首页</a>
       <a href="download.html">下载</a>
@@ -24,8 +24,8 @@
       立即下载 v6.4.0
     </button>
 
-    <h2>历史版本</h2>
-    <ul>
+    <h2 style="margin-top: 2rem;">历史版本</h2>
+    <ul style="list-style: none; padding: 0;">
       <li><a href="#">v6.3.0</a></li>
       <li><a href="#">v6.2.0</a></li>
       <li><a href="#">v6.1.0</a></li>
