--- a/about.html
+++ b/about.html
@@ -5,9 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>关于 - Minecraft-Toos</title>
   <link rel="stylesheet" href="style.css" />
+  <script>
+    // 页面切换淡入动画
+    window.addEventListener('DOMContentLoaded', () => {
+      document.body.classList.add('fade-in');
+    });
+
+    // 自动加载动画
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+        }
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.fade-in').forEach(el => {
+      observer.observe(el);
+    });
+  </script>
 </head>
-<body>
-  <header>
+<body class="fade-in">
+  <header class="fade-in">
     <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
       <a href="index.html">首页</a>
@@ -17,7 +36,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="fade-in">
     <h1>Minecraft-Toos 自述文件</h1>
     <p><strong>Minecraft 工具简要</strong></p>
     <p>这是我 2024 年 7 月开发的一个项目，从 1.0 版本一直到 6.1 版本，作者开发用了非常多的时间。</p>
