--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   </script>
 </head>
 <body class="fade-in">
+  <!-- Header Section -->
   <header class="fade-in">
     <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
@@ -36,15 +37,17 @@
     </nav>
   </header>
 
+  <!-- Main Content -->
   <main class="fade-in">
     <h1>Minecraft-Toos 自述文件</h1>
-    <p><strong>Minecraft 工具简要</strong></p>
+    <p><strong>Minecraft 工具简介</strong></p>
     <p>这是我 2024 年 7 月开发的一个项目，从 1.0 版本一直到 6.1 版本，作者开发用了非常多的时间。</p>
     <p>本人最初是用 VS (Microsoft Visual Studio) 开发，但是因为电脑出现了某些问题导致 VS 无法进行更新、安装操作。后来用破解工具破解了 Clion，以后就用了 Clion。</p>
     <p>本项目原名为“我的世界双版本启动器”，后改名为 Minecraft Toos。</p>
     <p>记得去我的 B 站主页: <a href="https://space.bilibili.com/3546730880567808" target="_blank">https://space.bilibili.com/3546730880567808</a> 点个赞哦~~~</p>
   </main>
 
+  <!-- Footer Section -->
   <footer>
     <p>&copy; JetCPP 2024-2025 保留所有权利</p>
   </footer>
