--- a/download.html
+++ b/download.html
@@ -5,28 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>下载 - Minecraft-Toos</title>
   <link rel="stylesheet" href="style.css" />
-  <script>
-    // 页面切换淡入动画
-    window.addEventListener('DOMContentLoaded', () => {
-      document.body.classList.add('fade-in');
-    });
-
-    // 自动加载动画
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.fade-in').forEach(el => {
-      observer.observe(el);
-    });
-  </script>
 </head>
-<body class="fade-in">
-  <header class="fade-in">
+<body>
+  <header>
     <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
       <a href="index.html">首页</a>
@@ -36,7 +17,7 @@
     </nav>
   </header>
 
-  <main class="fade-in">
+  <main>
     <h1>最新版本下载</h1>
     <p>当前版本：<strong>v6.4.0</strong></p>
     <button class="download-button" onclick="window.location.href='https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe'">
@@ -44,7 +25,7 @@
     </button>
 
     <h2 style="margin-top: 2rem;">历史版本</h2>
-    <ul style="list-style: none; padding: 0;" class="fade-in">
+    <ul style="list-style: none; padding: 0;">
       <li><a href="#">v6.3.0</a></li>
       <li><a href="#">v6.2.0</a></li>
       <li><a href="#">v6.1.0</a></li>
