--- a/about.html
+++ b/about.html
@@ -5,29 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>关于 - Minecraft-Toos</title>
   <link rel="stylesheet" href="style.css" />
-  <script>
-    // 页面切换淡入动画
-    window.addEventListener('DOMContentLoaded', () => {
-      document.body.classList.add('fade-in');
-    });
-
-    // 自动加载动画
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.fade-in').forEach(el => {
-      observer.observe(el);
-    });
-  </script>
 </head>
-<body class="fade-in">
-  <!-- Header Section -->
-  <header class="fade-in">
+<body>
+  <header>
     <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
     <nav>
       <a href="index.html">首页</a>
@@ -37,17 +17,15 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
-  <main class="fade-in">
+  <main>
     <h1>Minecraft-Toos 自述文件</h1>
-    <p><strong>Minecraft 工具简介</strong></p>
+    <p><strong>Minecraft 工具简要</strong></p>
     <p>这是我 2024 年 7 月开发的一个项目，从 1.0 版本一直到 6.1 版本，作者开发用了非常多的时间。</p>
     <p>本人最初是用 VS (Microsoft Visual Studio) 开发，但是因为电脑出现了某些问题导致 VS 无法进行更新、安装操作。后来用破解工具破解了 Clion，以后就用了 Clion。</p>
     <p>本项目原名为“我的世界双版本启动器”，后改名为 Minecraft Toos。</p>
     <p>记得去我的 B 站主页: <a href="https://space.bilibili.com/3546730880567808" target="_blank">https://space.bilibili.com/3546730880567808</a> 点个赞哦~~~</p>
   </main>
 
-  <!-- Footer Section -->
   <footer>
     <p>&copy; JetCPP 2024-2025 保留所有权利</p>
   </footer>
