--- a/download.html
+++ b/download.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>下载 - Minecraft-Toos</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>下载 | Minecraft Toos</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+    <style>
+        /* 复用index.html的CSS样式 */
+    </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Minecraft-Toos Logo" class="logo">
-    <nav>
-      <a href="index.html">首页</a>
-      <a href="download.html">下载</a>
-      <a href="about.html">关于</a>
-      <a href="https://github.com/dongzheyu/Minecraft-Toos?tab=readme-ov-file#minecraft-toos%E7%AE%80%E8%A6%81" target="_blank">Github</a>
-    </nav>
-  </header>
+    <!-- 导航栏 -->
+    <header>
+        <div class="logo-container">
+            <img src="logo.png" alt="Logo">
+            <h1>Minecraft Toos</h1>
+        </div>
+        
+        <nav>
+            <a href="index.html">首页</a>
+            <a href="about.html">关于</a>
+            <a id="github-link" href="https://github.com/dongzheyu/Minecraft-Toos/" 
+               target="_blank" 
+               rel="noopener noreferrer">Github</a>
+        </nav>
+    </header>
 
-  <main>
-    <h1>最新版本下载</h1>
-    <p>当前版本：<strong>v6.4.0</strong></p>
-    <button class="download-button" onclick="window.location.href='https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe'">
-      立即下载 v6.4.0
-    </button>
+    <main style="max-width: 1200px; margin: 2rem auto; padding: 0 1rem;">
+        <h2>版本下载</h2>
+        <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe"
+           class="download-btn"
+           download>最新版 v6.4.0</a>
+        
+        <section style="margin-top: 3rem;">
+            <h3>安装指南</h3>
+            <ol style="padding-left: 1.5rem;">
+                <li>从发布页下载安装包和.NET运行库</li>
+                <li>小白无脑式安装，安装包纯中文无英文</li>
+                <li>点击快捷方式即可打开，无需多余步骤！</li>
+                <li>选择功能大全，开始使用吧~</li>
+            </ol>
+        </section>
+    </main>
 
-    <h2 style="margin-top: 2rem;">历史版本</h2>
-    <ul style="list-style: none; padding: 0;">
-      <li><a href="#">v6.3.0</a></li>
-      <li><a href="#">v6.2.0</a></li>
-      <li><a href="#">v6.1.0</a></li>
-    </ul>
-  </main>
-
-  <footer>
-    <p>&copy; JetCPP 2024-2025 保留所有权利</p>
-  </footer>
+    <footer style="text-align: center; padding: 2rem; background: #f3f4f6; margin-top: 3rem;">
+        <p>JetCPP©2024-2025 保留所有权利</p>
+    </footer>
 </body>
 </html>
