--- a/index.html
+++ b/index.html
@@ -6,23 +6,11 @@
     <title>Minecraft Toos - 我的世界工具箱</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        /* 基础样式 */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f9fafb;
-            color: #1f2937;
-            line-height: 1.6;
-        }
-
-        /* 导航栏样式 */
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: 'Roboto', sans-serif; background-color: #f0fdf4; color: #166534; line-height: 1.6; }
+        
         header {
-            background: linear-gradient(135deg, #6366f1, #8b5cf6);
+            background: linear-gradient(135deg, #10b981, #4ade80);
             color: white;
             padding: 2rem 1rem;
             text-align: center;
@@ -38,11 +26,6 @@
             margin-bottom: 1rem;
         }
 
-        .logo-container img {
-            width: 40px;
-            height: 40px;
-        }
-
         nav a {
             color: white;
             text-decoration: none;
@@ -51,41 +34,45 @@
             margin: 0 1rem;
         }
 
-        nav a:hover {
-            text-decoration: underline;
-        }
+        nav a:hover { text-decoration: underline; }
+        nav a#github-link { text-decoration: underline red; }
 
-        nav a#github-link {
-            text-decoration: underline red;
-        }
-
-        /* 下载按钮样式 */
         .download-btn {
             display: inline-block;
             margin-top: 2rem;
             padding: 1rem 2rem;
-            background-color: #3b82f6;
+            background-color: #16a34a;
             color: white;
             border-radius: 8px;
             text-decoration: none;
             font-size: 1.2rem;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
         .download-btn:hover {
-            background-color: #2563eb;
+            background-color: #15803d;
             transform: scale(1.05);
         }
+
+        .feature-card {
+            background: white;
+            border-radius: 12px;
+            padding: 1.5rem;
+            margin: 1rem 0;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .feature-card:hover { transform: translateY(-5px); }
     </style>
 </head>
 <body>
-    <!-- 导航栏 -->
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo">
             <h1>Minecraft Toos</h1>
         </div>
-        
         <nav>
             <a href="download.html">下载</a>
             <a href="about.html">关于</a>
@@ -95,7 +82,6 @@
         </nav>
     </header>
 
-    <!-- 主要内容 -->
     <main style="max-width: 1200px; margin: 2rem auto; padding: 0 1rem;">
         <h2>立即下载</h2>
         <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe"
@@ -105,27 +91,15 @@
         <section id="features" style="margin-top: 3rem;">
             <h3>核心优势</h3>
             <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 2rem;">
-                <div style="flex: 1 1 28%;">
-                    <h4>功能齐全</h4>
-                    <p>主文件不超过300MB，却包含12项大板块功能。</p>
-                </div>
-                <div style="flex: 1 1 28%;">
-                    <h4>启动迅速</h4>
-                    <p>仅需2秒即可快速启动，无需多余等待。</p>
-                </div>
-                <div style="flex: 1 1 28%;">
-                    <h4>开源免费</h4>
-                    <p>已在GitHub上开源，无需支付任何费用。</p>
-                </div>
-                <div style="flex: 1 1 28%;">
-                    <h4>安全无毒</h4>
-                    <p>所有板块及主程序已通过杀毒软件检测。</p>
-                </div>
+                <div class="feature-card"><h4>功能齐全</h4><p>主文件不超过300MB，却包含12项大板块功能。</p></div>
+                <div class="feature-card"><h4>启动迅速</h4><p>仅需2秒即可快速启动，无需多余等待。</p></div>
+                <div class="feature-card"><h4>开源免费</h4><p>已在GitHub上开源，无需支付任何费用。</p></div>
+                <div class="feature-card"><h4>安全无毒</h4><p>所有板块及主程序已通过杀毒软件检测。</p></div>
             </div>
         </section>
     </main>
 
-    <footer style="text-align: center; padding: 2rem; background: #f3f4f6; margin-top: 3rem;">
+    <footer style="text-align: center; padding: 2rem; background: #ecfdf5; margin-top: 3rem;">
         <p>JetCPP©2024-2025 保留所有权利</p>
     </footer>
 </body>
