--- a/download.html
+++ b/download.html
@@ -45,21 +45,21 @@
             <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe"
                class="download-btn"
                download>最新版 v6.4.0</a>
-            <p style="margin-top: 1rem;">发布日期：2024年12月15日</p>
+            <p style="margin-top: 1rem;">发布日期：2025年4月26日</p>
         </div>
         
         <section class="version-history">
             <h3>版本历史</h3>
             <ul style="list-style-type: square; padding-left: 1.5rem;">
-                <li>v6.4.0 - 新增模组兼容性检测</li>
-                <li>v6.3.0 - 改进资源包加载速度</li>
-                <li>v6.2.0 - 修复多语言支持问题</li>
-                <li>v6.1.0 - 完全重构配置管理系统</li>
+                <li>v6.4.0 - 添加了登录功能，（默认用户名：User 默认密码：12345678）。添加了大家期待许久的检查更新程序，集成到安装包里，目前应用代码还是无法实现。</li>
+                <li>v6.3.3 - 安装程序美化，更新组件版本，把基岩版安装方式改为appX UWP安装包。</li>
+                <li>v6.1.0 - 更新了百宝箱，修复在特殊情况下打不开问题（感谢@1114534），算法库更新</li>
+                <li>v6.0更新了窗口标题，在百宝箱内添加新手攻略，集成前两个beta版本的补丁修复，主页版本信息更新</li>
             </ul>
             
             <h3 style="margin-top: 2rem;">系统要求</h3>
             <ul style="list-style-type: circle; padding-left: 1.5rem;">
-                <li>Windows 10 或更高版本</li>
+                <li>Windows 10 X64或更高版本</li>
                 <li>.NET Framework 4.8</li>
                 <li>至少 4GB RAM</li>
                 <li>4GB 可用磁盘空间</li>
