--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>关于 | Minecraft Toos</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        @import url('index.html');
+        @import url('download.html');
         .timeline {
             position: relative;
             max-width: 800px;
@@ -63,8 +63,8 @@
         </nav>
     </header>
 
-    <main style="max-width: 1200px; margin: 2rem auto; padding: 0 1rem;">
-        <section style="margin-top: 3rem;">
+    <main>
+        <section class="content-section">
             <h2>项目简介</h2>
             <p>这是我2024年7月开发的一个项目，从1.0版本一直到6.1版本，作者开发用了非常多的时间。</p>
             <p>最初用的是VS(Microsoft Visual Studio)开发，后来因电脑问题改用破解Clion开发。</p>
