--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于 | Minecraft Toos</title>
+    <link rel="icon" href="logo.png" type="image/png"> <!-- 添加 Logo -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
