--- a/download.html
+++ b/download.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>下载 | Minecraft Toos</title>
+    <link rel="icon" href="logo.png" type="image/png"> <!-- 添加 Logo -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         * {
