--- a/about.html
+++ b/about.html
@@ -3,64 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于 | Minecraft Toos</title>
-    <link rel="icon" href="logo.png" type="image/png"> <!-- 添加 Logo -->
-    <link rel="stylesheet" href="styles.css">
+    <title>关于我们 | JetCPP 工作室</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">首页</a>
-            <a href="download.html">下载</a>
-            <a href="#">Github</a>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <a href="index.html">首页</a>
+        <a href="projects.html">所有项目</a>
+        <a href="about.html">关于我们</a>
+    </nav>
 
-    <main>
-        <section class="content">
-            <!-- 项目简介 -->
-            <div class="intro-box">
-                <p>这是我2024年7月开发的一个项目，从1.0版本一直到6.1版本，作者开发用了非常多的时间。</p>
-                <p>最初用的是VS(Microsoft Visual Studio)开发，后来因电脑问题改用破解Clion开发。</p>
-                <p>本项目原名为我的世界双版本启动器，后改名为Minecraft Toos。</p>
-            </div>
-
-            <h3>B站主页：</h3>
-            <p><a href="https://space.bilibili.com/3546730880567808" target="_blank">点个赞哦~~~</a></p>
-
-            <!-- 开发历程 -->
-            <h3 style="margin-top: 3rem;">开发历程</h3>
-            <ul class="timeline">
-                <li>
-                    <span class="marker"></span>
-                    <div class="timeline-content">
-                        <strong>2024.07</strong>
-                        <p>项目立项，完成基础框架搭建</p>
-                    </div>
-                </li>
-                <li>
-                    <span class="marker"></span>
-                    <div class="timeline-content">
-                        <strong>2024.07</strong>
-                        <p>首次发布1.0版本</p>
-                    </div>
-                </li>
-                <li>
-                    <span class="marker"></span>
-                    <div class="timeline-content">
-                        <strong>2024.12</strong>
-                        <p>首次发布于GitHub，版本为4.0.0</p>
-                    </div>
-                </li>
-                <li>
-                    <span class="marker"></span>
-                    <div class="timeline-content">
-                        <strong>2025.04</strong>
-                        <p>v6.4.0正式版发布</p>
-                    </div>
-                </li>
-            </ul>
-        </section>
+    <main class="about">
+        <h2>关于我们</h2>
+        <div class="construction">
+            <p>当前页面正在施工中</p>
+            <p>敬请期待我们的详细介绍！</p>
+        </div>
     </main>
 </body>
 </html>
