--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </nav>
 
     <main class="hero">
-        <h1>欢迎来到 JetCPP 工作室</h1>
-        <p>我们专注于高质量的软件开发与技术创新</p>
+        <h1>JetCPP 工作室</h1>
+        <p>专注前沿技术开发与创新</p>
         <a href="projects.html" class="btn">查看项目</a>
     </main>
 </body>
