--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,8 @@
         <div class="project-card">
             <h3>Minecraft Toos</h3>
             <p>我的世界双版本启动器，功能强大且易于使用</p>
-            <a href="https://github.com/dongzheyu/Minecraft-Toos" target="_blank" class="btn">GitHub 项目</a>
+            <a href="#" class="btn">GitHub 项目</a>
         </div>
-        <!-- 未来可添加更多项目卡片 -->
     </main>
 </body>
 </html>
