--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <h2>关于我们</h2>
         <div class="construction">
             <p>当前页面正在施工中</p>
-            <p>敬请期待我们的详细介绍！</p>
+            <p>敬请期待详细介绍！</p>
         </div>
     </main>
 </body>
