--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JetCPP 工作室</title>
+    <title>JetCPP Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html">首页</a>
-        <a href="projects.html">所有项目</a>
-        <a href="about.html">关于我们</a>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">主页</a></li>
+            <li><a href="about.html">关于</a></li>
+            <li><a href="projects.html">所有项目</a></li>
+        </ul>
     </nav>
 
-    <main class="hero">
-        <h1>JetCPP 工作室</h1>
-        <p>专注前沿技术开发与创新</p>
-        <a href="projects.html" class="btn">查看项目</a>
-    </main>
+    <div class="logo-container">
+        <img src="logo.png" alt="JetCPP Logo" class="logo">
+    </div>
+
+    <div class="content">
+        <h1 class="slogan">代码重塑世界 · 创新驱动未来</h1>
+        <!-- 更多内容 -->
+    </div>
 </body>
 </html>
