--- a/projects.html
+++ b/projects.html
@@ -1,25 +1,35 @@
+<!-- projects.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>所有项目 | JetCPP 工作室</title>
+    <title>项目列表 | JetCPP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html">首页</a>
-        <a href="projects.html">所有项目</a>
-        <a href="about.html">关于我们</a>
+    <nav>
+        <ul class="nav-links">
+            <!-- 相同导航栏 -->
+        </ul>
     </nav>
 
-    <main class="projects">
-        <h2>我们的项目</h2>
+    <div class="logo-container">
+        <img src="logo.png" alt="JetCPP Logo" class="logo">
+    </div>
+
+    <div class="content">
+        <h1>所有项目</h1>
         <div class="project-card">
-            <h3>Minecraft Toos</h3>
-            <p>我的世界双版本启动器，功能强大且易于使用</p>
-            <a href="#" class="btn">GitHub 项目</a>
+            <h2>Minecraft-Tools</h2>
+            <p>一站式Minecraft服务器管理解决方案</p>
+            <p>🚀 已发布 v1.2.0 | 下载量 15k+</p>
+            <a href="https://github.com/dongzheyu/Minecraft-Toos/" 
+               class="github-link"
+               target="_blank">
+               GitHub仓库
+            </a>
         </div>
-    </main>
+    </div>
 </body>
 </html>
