--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JetCPP Studio</title>
+    <title>JetCPP 工作室</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 导航栏 -->
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="projects.html">所有项目</a></li>
+            <li><a href="projects.html">项目</a></li>
         </ul>
     </nav>
 
+    <!-- Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
+    <!-- 主要内容 -->
     <div class="content">
         <h1 class="slogan">代码重塑世界 · 创新驱动未来</h1>
-        <!-- 更多内容 -->
+        
+        <div class="project-card">
+            <h2>最新动态</h2>
+            <p>欢迎来到JetCPP工作室，探索编程的无限可能！</p>
+        </div>
     </div>
 </body>
 </html>
