--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -8,20 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 统一导航栏 -->
     <nav>
         <ul class="nav-links">
-            <!-- 相同导航栏 -->
+            <li><a href="index.html">主页</a></li>
+            <li><a href="about.html">关于</a></li>
+            <li><a href="projects.html">项目</a></li>
         </ul>
     </nav>
 
+    <!-- Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
+    <!-- 施工提示 -->
     <div class="content">
         <div class="project-card">
-            <h2>🚧 页面施工中</h2>
-            <p>我们正在打造更好的用户体验，敬请期待！</p>
+            <h2>🚧 页面升级中</h2>
+            <p>我们正在为您打造更好的体验，敬请期待！</p>
             <div class="progress-bar">
                 <div class="progress" style="width: 65%"></div>
             </div>
