--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
     <title>关于我们 | JetCPP</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- 统一导航栏 -->
+<body class="alt-layout"> <!-- 新增class -->
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">主页</a></li>
@@ -16,19 +15,15 @@
         </ul>
     </nav>
 
-    <!-- Logo区域 -->
+    <!-- 修改后的Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
-    <!-- 施工提示 -->
     <div class="content">
         <div class="project-card">
             <h2>🚧 页面升级中</h2>
             <p>我们正在为您打造更好的体验，敬请期待！</p>
-            <div class="progress-bar">
-                <div class="progress" style="width: 65%"></div>
-            </div>
         </div>
     </div>
 </body>
