--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>关于我们 | JetCPP</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="alt-layout"> <!-- 新增class -->
+<body class="alt-layout">
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">主页</a></li>
@@ -15,9 +15,10 @@
         </ul>
     </nav>
 
-    <!-- 修改后的Logo区域 -->
     <div class="logo-container">
-        <img src="logo.png" alt="JetCPP Logo" class="logo">
+        <a href="index.html"> <!-- 新增链接 -->
+            <img src="logo.png" alt="JetCPP Logo" class="logo">
+        </a>
     </div>
 
     <div class="content">
