--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </nav>
 
     <div class="logo-container">
-        <img src="logo.png" alt="JetCPP Logo" class="logo">
+        <a href="index.html"> <!-- 新增链接 -->
+            <img src="logo.png" alt="JetCPP Logo" class="logo">
+        </a>
     </div>
 
     <div class="content">
