更新Minecraft-Toos帮助指南

--- a/Minecraft-Toos_Help.html
+++ b/Minecraft-Toos_Help.html
@@ -23,7 +23,6 @@
 <body>
     <div class="markdown-body">
         <h1> Minecraft-Toos 使用手册</h1>
-        
         <h2>快速入门</h2>
         <ol>
             <li><strong>安装流程</strong>
@@ -48,11 +47,11 @@
             <tbody>
                 <tr>
                     <td>启动PCL2CE</td>
-                    <td>确认路径后点击"快速启动"按钮</td>
+                    <td>直接选择启动</td>
                 </tr>
                 <tr>
                     <td>启动HMCL</td>
-                    <td>需提前安装Java 8+环境</td>
+                    <td>需提前安装Java 8+环境，配置环境请使用功能5</td>
                 </tr>
             </tbody>
         </table>
