更新Minecraft-Toos帮助指南

--- a/Minecraft-Toos_Help.html
+++ b/Minecraft-Toos_Help.html
@@ -97,6 +97,7 @@
             <li><a href="https://github.com/PCL-Community/PCL2CEHelp?tab=readme-ov-file">PCL2CE官方文档</a></li>
             <li><a href="https://minecraft.fandom.com/zh/wiki/Minecraft_Wiki">Minecraft Wiki</a></li>
             <li><a href="https://support.microsoft.com/zh-cn/account-billing/%E5%88%96%E5%BB%BAMicrosoft%E8%B4%A6%E6%88%B7-8312d7a2-f105-406b-bda2-c2ea29823370">微软账户注册指南</a></li>
+            <li>如果本帮助文档不全，请<a href="https://space.bilibili.com/3546730880567808">点击投稿</a>作者会尽快把宝贵的想法添加到文档中</li>
         </ul>
         
         <div class="legal-notice">
