--- a/projects.html
+++ b/projects.html
@@ -37,23 +37,33 @@
                    rel="noopener">
                    GitHub仓库
                 </a>
-                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.2/Minecraft-Toos.Set-up.exe"
+                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.5.0/Minecraft-Toos.Set-up.exe"
                    class="download-btn"
                    download>
                    ⬇️ 下载安装包(仅支持X64的Windows10＆Windows11)
                 </a>
-                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.2/default.NET.running.zip"
+                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.5.0/NET.running.zip"
                    class="download-btn"
                    download>
                    🛜 下载.NET运行库
                 </a>
+                <a class="download-btn"
+                   href="https://dongzheyu.github.io/Minecraft-Toos_Help.html"
+                   rel="noopener"
+                   target="_blank">
+                   📄 帮助文档
+                </a>
             </div>
 
             <div class="update-log">
-                <h3>更新日志 v6.4.2</h3>
+                <h3>更新日志 v6.5.0</h3>
                 <ul>
-                    <li>部分提示框使用了MessageBox弹窗，更加醒目了。</li>
-                    <li>修复登录是输错密码的卡顿</li>
+                    <li>将所有类弹窗的 `cout` 替换为 `MessageBox`，提升用户体验。</li>
+                    <li>优化代码结构，提高可读性和维护性。</li>
+                    <li>新增赞助入口（爱发电），支持项目持续发展。</li>
+                    <li>添加帮助文档链接，方便用户查阅使用说明。</li>
+                    <li>性能进一步优化，提升整体运行效率。</li>
+                    <li>登录界面输入密码时自动显示为星号，增强安全性与交互体验。</li>
                 </ul>
             </div>
             <div class="install">
