更新Minecraft-Toos下载和.Net运行库为伪直链(Github太慢)

--- a/projects.html
+++ b/projects.html
@@ -37,12 +37,12 @@
                    rel="noopener">
                    GitHub仓库
                 </a>
-                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.5.0/Minecraft-Toos.Set-up.exe"
+                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj71da522531b35450588f4a73243d49387?x-cli-msg=%7B%22linkId%22%3A%221GumWstoq6D-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
                    class="download-btn"
                    download>
                    ⬇️ 下载安装包(仅支持X64的Windows10＆Windows11)
                 </a>
-                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.5.0/NET.running.zip"
+                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7397fa05b414d418db8dca902836e2778?x-cli-msg=%7B%22linkId%22%3A%221GumWstoq6E-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
                    class="download-btn"
                    download>
                    🛜 下载.NET运行库
