更新Minecraft-Toos下载和.Net运行库为伪直链(Github太慢) 主页资讯更新

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3><span style="color: #00FF00; ">[置项]</span>2.Minecraft-Toos默认登录账户：User     默认密码：12345678</h3>
             <h3><span style="color: #00FF00; ">[置项]</span>3.Minecraft-Toos登录账户可进行自定义，关注并私信作者，点击<a href="https://space.bilibili.com/3546730880567808">此处</a>前往，申请时请准备以下材料：<br>&emsp;&emsp;&emsp;&emsp;①登录用户名（可以是中文）<br>&emsp;&emsp;&emsp;&emsp;②登录密码（字母、数字、符号）<br>&emsp;&emsp;&emsp;&emsp;③登录提示（可自定义文本）</h3>
             <h3>4.Jetbrains Crack已发行，<a href="https://dongzheyu.github.io/projects.html">去看看</a></h3>
-            <h3>5.Minecraft-Toos6.4.2发布，<a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.2/Minecraft-Toos.Setup.exe">立刻更新</a></h3>
+            <h3>5.Minecraft-Toos6.5.0发布，<a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.2/Minecraft-Toos.Setup.exe">点击前往</a></h3>
             <div class="button-group">
                 <a href="projects.html" class="download-btn">
                     🚀 查看我们的项目
