--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                 <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7397fa05b414d418db8dca902836e2778?x-cli-msg=%7B%22linkId%22%3A%221GumWstoq6E-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
                    class="download-btn"
                    download>
-                   🛜 下载.NET运行库
+                   🛜 下载.NET运行库(可选，当运行出现问题时)
                 </a>
                 <a class="download-btn"
                    href="https://dongzheyu.github.io/Minecraft-Toos_Help.html"
